microk8s-ingress-example/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: k8s-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "160"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "160"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "160"
    nginx.ingress.kubernetes.io/proxy-next-upstream-timeout: "160"
spec:
  rules:
  - http:
      paths:
        - path: /foo
          pathType: Prefix
          backend:
            service:
              name: foo-app
              port:
                number: 8080
        - path: /bar
          pathType: Prefix
          backend:
            service:
              name: bar-app
              port:
                number: 8080
        - path: /books/(.*)
          pathType: Prefix
          backend:
            service:
              name: book-service
              port:
                number: 8083
#         - path: /kuard/(.*)
#           pathType: Prefix
#           backend:
#             service:
#               name: kuard-app
#               port:
#                 number: 8080
#         - path: /ts-model/(.*)
#           pathType: Prefix
#           backend:
#             service:
#               name: ts-model-service
#               port:
#                 number: 8085
#         - path: /earnings-model/(.*)
#           pathType: Prefix
#           backend:
#             service:
#               name: earnings-model-service
#               port:
#                 number: 8080
