microk8s-ingress-example/prometheus-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: k8s-ingress
  namespace: monitoring
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - http:
      paths:
        - path: /prom/(.*)
          pathType: Prefix
          backend:
            service:
              name: prometheus-k8s
              port:
                number: 9090
